main page done!

--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Vote Zanoria for Senator on Multimedia!</title>
   </head>
   <body>
     <canvas id="bg"></canvas>
+    <main>
+        <img src= "./resources/me.jpg" id="me"></img>
+      <header>
+        <h1 >Hi I'm Alex</h1>
+        <p>Currently running for senator on multimedia</p>
+      </header>
+      <div>
+        <h1>Who are you?</h1>
+        <p>I'm a 2nd year BSIS Student who likes being creative and solving problems.
+           I can adapt to situations well and is a fast learner. Did you know this is my first website?</p>
+      </div>
+      <div>
+        <h1>Why Should I vote for you?</h1>
+        <p>If you elect me I plan to help make events organized by the STCL to be more interactive and entertaining for students.
+          I have noticed that most students who join these events aren't there because of the event but for the attendance. If i'm elected
+          I will try to make it so that every event you come to will be an event you want to be in.
+        </p>
+      </div>
+      <div>
+        <h1>Can I see some of your work?</h1>
+      </div>
+      <a href="photos.html"><img src="resources/meramyon.JPG"></img></a>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
